// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on hover displays button and overlay 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
    }
  }
>
  <a
    href="https://www.adobe.com"
    onDragStart={[Function]}
  >
    <div
      style={
        Object {
          "backgroundColor": undefined,
          "border": undefined,
          "borderColor": undefined,
          "borderRadius": undefined,
          "borderWidth": undefined,
          "minHeight": undefined,
          "paddingBottom": undefined,
          "paddingLeft": undefined,
          "paddingRight": undefined,
          "paddingTop": undefined,
          "textAlign": undefined,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "rgb(0,0,0,0.5)",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<h1><span style=\\"color: #ffffff; background-color: #000000;\\">A new way of shopping</span></h1><p><span style=\\"color: #ffffff; background-color: #000000;\\">Experience the best way of shopping today!</span></p>",
            }
          }
          style={Object {}}
        />
        <div>
          <button
            type="button"
          >
            <span />
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`on hover displays button and overlay 2`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
    }
  }
>
  <a
    href="https://www.adobe.com"
    onDragStart={[Function]}
  >
    <div
      style={
        Object {
          "backgroundColor": undefined,
          "border": undefined,
          "borderColor": undefined,
          "borderRadius": undefined,
          "borderWidth": undefined,
          "minHeight": undefined,
          "paddingBottom": undefined,
          "paddingLeft": undefined,
          "paddingRight": undefined,
          "paddingTop": undefined,
          "textAlign": undefined,
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "rgb(0,0,0,0.5)",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<h1><span style=\\"color: #ffffff; background-color: #000000;\\">A new way of shopping</span></h1><p><span style=\\"color: #ffffff; background-color: #000000;\\">Experience the best way of shopping today!</span></p>",
            }
          }
          style={Object {}}
        />
        <div>
          <button
            type="button"
          >
            <span />
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`renders a configured collage-left Banner component 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "marginBottom": "1px",
      "marginLeft": "2px",
      "marginRight": "3px",
      "marginTop": "4px",
    }
  }
>
  <a
    href="gear/bags.html"
    onDragStart={[Function]}
  >
    <div
      style={
        Object {
          "backgroundAttachment": "scroll",
          "backgroundColor": "blue",
          "backgroundImage": "url(desktop-image.jpg)",
          "backgroundPosition": "center center",
          "backgroundRepeat": "no-repeat",
          "backgroundSize": "cover",
          "border": "solid",
          "borderColor": "rgb(0,0,0)",
          "borderRadius": "15px",
          "borderWidth": "1px",
          "minHeight": "300px",
          "paddingBottom": "40px",
          "paddingLeft": "40px",
          "paddingRight": "40px",
          "paddingTop": "40px",
          "textAlign": "right",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "rgb(0,0,0,0.5)",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<h1><span style=\\"color: #ffffff; background-color: #000000;\\">A new way of shopping</span></h1><p><span style=\\"color: #ffffff; background-color: #000000;\\">Experience the best way of shopping today!</span></p>",
            }
          }
          style={Object {}}
        />
        <div>
          <button
            type="button"
          >
            <span>
              Shop Bags
            </span>
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`renders a configured collage-left Banner component on mobile 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "marginBottom": "1px",
      "marginLeft": "2px",
      "marginRight": "3px",
      "marginTop": "4px",
    }
  }
>
  <a
    href="https://www.adobe.com"
    onDragStart={[Function]}
    target="_blank"
  >
    <div
      style={
        Object {
          "backgroundAttachment": "scroll",
          "backgroundColor": "blue",
          "backgroundImage": "url(mobile-image.jpg)",
          "backgroundPosition": "center center",
          "backgroundRepeat": "no-repeat",
          "backgroundSize": "cover",
          "border": "solid",
          "borderColor": "rgb(0,0,0)",
          "borderRadius": "15px",
          "borderWidth": "1px",
          "minHeight": "300px",
          "paddingBottom": "40px",
          "paddingLeft": "40px",
          "paddingRight": "40px",
          "paddingTop": "40px",
          "textAlign": "right",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": null,
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<h1><span style=\\"color: #ffffff; background-color: #000000;\\">A new way of shopping</span></h1><p><span style=\\"color: #ffffff; background-color: #000000;\\">Experience the best way of shopping today!</span></p>",
            }
          }
          style={Object {}}
        />
        <div>
          <button
            type="button"
          >
            <span>
              Shop Bags
            </span>
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`renders a configured poster Banner component 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "marginBottom": "1px",
      "marginLeft": "2px",
      "marginRight": "3px",
      "marginTop": "4px",
    }
  }
>
  <a
    href="gear/bags.html"
    onDragStart={[Function]}
    target="_blank"
  >
    <div
      style={
        Object {
          "backgroundAttachment": "scroll",
          "backgroundColor": "blue",
          "backgroundImage": "url(desktop-image.jpg)",
          "backgroundPosition": "center center",
          "backgroundRepeat": "repeat",
          "backgroundSize": "cover",
          "border": "solid",
          "borderColor": "rgb(0,0,0)",
          "borderRadius": "15px",
          "borderWidth": "1px",
          "minHeight": "300px",
          "textAlign": "right",
        }
      }
    >
      <div
        style={
          Object {
            "backgroundColor": "rgb(0,0,0,0.5)",
            "minHeight": "300px",
            "paddingBottom": "40px",
            "paddingLeft": "40px",
            "paddingRight": "40px",
            "paddingTop": "40px",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<h1><span style=\\"color: #ffffff; background-color: #000000;\\">A new way of shopping</span></h1><p><span style=\\"color: #ffffff; background-color: #000000;\\">Experience the best way of shopping today!</span></p>",
            }
          }
          style={
            Object {
              "width": "100%",
            }
          }
        />
        <div>
          <button
            type="button"
          >
            <span>
              Shop Bags
            </span>
          </button>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`renders an empty Banner component 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
        "border": undefined,
        "borderColor": undefined,
        "borderRadius": undefined,
        "borderWidth": undefined,
        "minHeight": undefined,
        "textAlign": undefined,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": undefined,
          "minHeight": undefined,
          "paddingBottom": undefined,
          "paddingLeft": undefined,
          "paddingRight": undefined,
          "paddingTop": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        style={
          Object {
            "width": "100%",
          }
        }
      />
      <div>
        <button
          type="button"
        >
          <span />
        </button>
      </div>
    </div>
  </div>
</div>
`;
